fixed card alignment medication list

--- a/src/components/history/styles/MedicationHistoryCard.css
+++ b/src/components/history/styles/MedicationHistoryCard.css
@@ -18,7 +18,7 @@
     
 } */
 
-.card-style {
+/* .card-style {
     max-width: 90%;
     display: flex;
     flex: 2;
@@ -36,7 +36,7 @@
     margin: 20px;
     background-color: #40476d8f; 
 
-}
+} */
 
 /* 
 .card-toggle-style {
@@ -53,19 +53,19 @@
     justify-content: center;
 } */
 
-.span-checbox-medicationHx {
+.span-checkbox-medicationHx {
     display: flex;
     justify-content: center;
 }
 
 
-.card-toggle-style {
+/* .card-toggle-style {
     width: 60%;
     align-content: space-around;
     margin-top: 10px;
     background-color: #f1f1f1;
     margin: 15px;
-}
+} */
 
 
 .btn-all {
@@ -81,7 +81,7 @@
 }
 
 .btn-edit, .btn-delete, .btn-rx-details, .btn-expand {
-   background-color:  #40476d;
+  
    
 }
 
