--- a/src/components/medication/styles/MedicationCard.css
+++ b/src/components/medication/styles/MedicationCard.css
@@ -7,49 +7,11 @@
     justify-content: center;  
 }
 
-.card-style-containerz {
-    
-    display: flex;
-    flex-direction: row;
-    /* justify-content: center;
-    align-items: center; */
-    width: 90%;
-    flex-wrap: nowrap;
-    
-}
 
-
-.card-style {
-    max-width: 100%;
-    /* max-width: 100%; */
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    margin: 15px; 
-    flex-wrap: wrap;
-    flex-basis: auto; 
-}
-
-.card-toggle-style-group {
-    /* width: 60%; */
-    display: inline-block;
-    flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-
-.card-item-style-medicationCard {
-     /* max-width: 50%;
-    max-height: 75%;  */
-    /* width: 100%; */
-    /* flex: 1; */
-   
-    /* align-items: center; */
-    justify-content: center;
-    /* margin: 20px; */
+.medicationCard {
     background-color: #acbea370;
-   
-  
+    box-shadow: 1px 1px 1px inset;
+    margin: 10px;
 }
 
 .checkbox-alignment {
@@ -57,17 +19,10 @@
     justify-content: center;
 }
 
-
-.card-toggle-style {
-   
-    display: inline-block;
-    justify-content: center;
-    align-content: space-between;
-    background-color: #f1f1f1;
-    margin: 15px;
-
-}
-
+/* .card {
+    
+    margin-bottom: 5px;
+} */
 
 .btn-all {
     display: flex;
@@ -81,12 +36,16 @@
 
 .btn-edit, .btn-expand, .btn-delete, .btn-rx-details, .btn-expand {
    margin: 5px;
-   background-color: #40476d;
+   
    border: none
 }
 
+.img-delete-trashCan {
+    max-width: 10px;
+}
+
 .img-thumbnail-medicationCard {
-    max-width: 20%;
+    max-width: 10%;
 }
 
  .list-group-item-notes {
