--- a/src/components/medication/styles/MedicationList.css
+++ b/src/components/medication/styles/MedicationList.css
@@ -5,21 +5,19 @@ h1, h2, h3, h4, h5, h6 {
    
 }
 
-/* .section-currentMedicationList--container {
-    display: flex;
-    width: 90%;
-    flex-wrap: wrap;
-    flex-direction: row;
-    
-} */
-
-.medication-cards-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    
-    width: 90%;  
+.section-currentMedicationList--container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+      
 }
+
+.card-deck {
+    width: 100%;
+}
+
+/* .card-deck .card {
+    width: initial;
+} */
 
 
 .span-addDrug-container {
@@ -44,9 +42,5 @@ h1, h2, h3, h4, h5, h6 {
      
 }
 
-/* .searchBar-medicationCard {
-    display: flex;
-    justify-content: center;
-} */
 
 
